--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 #################
+## Misc
+#################
+
+*.zip
+*.npp
+*.xml
+__pycache__/
+
+#################
 ## Eclipse
 #################
 
